landing-page/src/Components/Header/Header.module.css
.HeaderPage {
    background: url('../../image-hero.jpg');
    width: 100%;
    height: 867px;
    /* position: absolute; */
    background-size: cover;

    padding-left: 150px;
    padding-top: 60px;
    padding-right: 150px;
}

.Links {
    float: right;
    margin-top:3px;
}

.Links a {
    margin: 0 20px;
    color: white;
    font-family: 'Alata', sans-serif;
    letter-spacing: 1px;
}

.Links a:hover{
    text-decoration: none;
    color: white;
}


/* Links :Hover with ::After, Try using Div's next time */
.Links a:hover::after {
    content:" ";
    width: 30px;
    border-bottom: 1px solid white;
    position: absolute;
    top:40px;
}

.About:hover::after {
    margin-left:-37px !important;
}

.Careers:hover::after {
    margin-left:-45px !important;
}

.Events:hover::after {
    margin-left:-43px !important;
}

.Products:hover::after {
    margin-left:-50px !important;
}

.Support:hover::after {
    margin-left:-46px !important;
}


/* THIS SECTION IS FOR THE HEADR BODY */

.OuterHeaderBody {
    padding-right: 48%;
}

.HeaderBody {
    border: 1px solid white;
    margin-top: 200px;
    padding: 20px 180px 20px 30px;
}

.HeaderBody h1 {
    color: white;
    font-size: 100px;
    font-weight: 100;
}


/* MEDIA QUERIES SECTION */

@media (max-width: 1600px) {
    .OuterHeaderBody {
        padding-right: 50%;
    }

    .HeaderBody h1 {
        font-size: 57px;
    }
}

@media (max-width: 1440px) {
    .OuterHeaderBody {
        padding-right: 49%;
    }

    .HeaderBody {
        padding-right: 95px;
        margin-top: 150px;
    }

    .HeaderBody h1 {
        font-size: 46px;
    }

    .Links a {
        margin: 0 13px;
    }

    .HeaderPage {
        height: 542px;
    }
}

@media (max-width: 992px) {
    .HeaderPage {
        padding-left: 20px;
    }

    .CollapseButton button{
        background-color: white;
        float: right;
    }

}

